--- a/config/config_prod.json
+++ b/config/config_prod.json
@@ -2,5 +2,7 @@
   "time_to_gather_books": 86400,
   "notify_before_gathering": 43200,
   "time_for_telegram_poll": 86400,
-  "notify_before_poll": 43200
+  "notify_before_poll": 43200,
+  "debug_mode": false,
+  "long_polling_timeout": 60
 }
