--- a/config/config_prod.json
+++ b/config/config_prod.json
@@ -4,5 +4,7 @@
   "time_for_telegram_poll": 86400,
   "notify_before_poll": 43200,
   "debug_mode": false,
-  "long_polling_timeout": 60
+  "long_polling_timeout": 60,
+  "db_path": "./db/book_club_bot.db",
+  "log_file_name": "application.log"
 }
