--- a/config/config_prod.json
+++ b/config/config_prod.json
@@ -6,5 +6,6 @@
   "debug_mode": false,
   "long_polling_timeout": 60,
   "db_path": "./db/book_club_bot.db",
+  "db_name": "book_club_boot",
   "log_file_name": "application.log"
 }
