--- a/config/config_prod.json
+++ b/config/config_prod.json
@@ -5,7 +5,7 @@
   "notify_before_poll": 43200,
   "debug_mode": false,
   "long_polling_timeout": 60,
-  "mongo_uri": "mongodb://localhost:27017",
+  "mongo_uri": "mongodb://mongo:27017",
   "db_name": "book_club_boot",
   "log_file_name": "application.log"
 }
